Add show profile endpoint (/profiles/{username). #1
